--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Image Compressing Tool</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      if ('serviceWorker' in navigator){
+        navigator.serviceWorker.register(".serviceWorker/sw.js").then(function(registration){
+          console.log('ServiceWorker registration successful with scope: ', registration.scope)
+        }).catch(function(err){
+          console.log('ServiceWorker registration failed: ', err)
+        });
+      }
+    </script>
   </body>
 </html>
